fixed margin issue on small screen, added some image files

--- a/static/css/custom.css
+++ b/static/css/custom.css
@@ -13,7 +13,6 @@
 - Anchors
 */
 
-
 /* Nav Bar
  –––––––––––––––––––––––––––––––––––––––––––––––––– */
 @media (min-width: 400px){
@@ -194,7 +193,6 @@ body, html, main {
 .overlay {
    background:transparent; 
    position:relative; 
-   width:660px;
    height:450px; /* your iframe height */
    top:450px;  /* your iframe height */
    margin-top:-450px;  /* your iframe height */
